Update, Nachbesserung eingearbeitet, Datumsangaben hinzugefügt

--- a/index.html
+++ b/index.html
@@ -376,13 +376,12 @@ code {
 <li><a href="#arbeitszimmer">Arbeitszimmer</a></li>
 </ul>
 <h3 id="details">Details</h3>
-<p><strong>Datum:</strong> 22.06.2025</p>
-<p>Die Mängel wurden am 20.06. vor dem Einzug in die Wohnung aufgenommen. Ein zweiter Teil wurde nach dem Einzug protokolliert, jedoch schon vorher bemerkt. Das Auftauchen dieser Mängel durch den Umzug, ist daher ausgeschlossen.
-Unterhalb des Bildes findet sich die Beschreibung des Problems, sowie das erwartete Ergebnis.</p>
+<p>Die <strong>geplante Fertigstellung war der 01.06.</strong>, dieser Termin konnte von der Werksfirma nicht eingehalten werden, sodass eine Abnahme erst am 13.06. möglich wurde. Zu diesem Termin waren die Arbeiten in der Wohnung immernoch nicht abgeschlossen, daher erfolgte auch hier keine Abnahme. Der Einzug in die Wohnung erfolgte am 20.06., allerdings ohne Abnahme, da die Wohnung auch hier noch nicht fertig war. Am 19.06. und 20.06. wurden erste Mängel bemerkt und protokolliert. Das Auftauchen dieser Mängel durch den Umzug, ist daher ausgeschlossen.</p>
+<p>Aktuell wird die Wohnung seit dem 20.06. bewohnt.</p>
 <h3 id="bemerkung-zu-den-b%C3%B6den">Bemerkung zu den Böden</h3>
 <p>Die Arbeit an den Böden wurde auf Anfrage der Eigentümer gestoppt.
 In Schlafzimmer und Arbeitszimmer galten die Arbeiten als abgeschlossen, jedoch ist der Schliff hier weiterhin sehr rau und es zeigen sich Farbrückstände der vorherigen Schichten.
-Im Flur sind die Böden ebenfalls rau geschliffen, allerdings ohne Lackierung, da diese zum Afutragsstopp nicht abgeschlossen war.
+Im Flur sind die Böden ebenfalls rau geschliffen, allerdings ohne Lackierung, da diese zum Autragsstopp nicht abgeschlossen war.
 Das Wohnzimmer wurde noch nicht bearbeitet.</p>
 <div id='Flur' />
 <h2 id="flur">Flur</h2>
@@ -391,9 +390,7 @@ Das Wohnzimmer wurde noch nicht bearbeitet.</p>
 </video>
 <p><strong>Problem</strong>: Das Licht im Flur flackert manchmal nach dem Anschalten. Es bleibt dann am Flackern und schaltet sich nicht richtig an.</p>
 <p><strong>Erwartung:</strong> Das Licht flakert beim Anschalten nicht mehr.</p>
-<img src="./Arbeitszimmer/1b4805f4-841c-44ad-ae46-e495a4f5d8e7.jpeg" alt="drawing" width="400"/>
-<p><strong>Problem:</strong> Flecken an der Wand im Arbeitszimmer. Vermutlich von der Beize.</p>
-<p><strong>Erwartung:</strong> Keine Flecken an der Wand. Gern Farbe für die Eigentümer da lassen.</p>
+<p><strong>Update</strong>: Das Problem wurde durch ein neues Relais gelöst.</p>
 <img src="./Flur/WhatsApp Image 2025-06-22 at 13.49.07.jpeg" alt="drawing" width="400" height="500"/>
 <p><strong>Problem:</strong> Flecken an der Wand.</p>
 <p><strong>Erwartung:</strong> Übermalen der Flecken.</p>
@@ -442,16 +439,18 @@ Das Wohnzimmer wurde noch nicht bearbeitet.</p>
 <img src="./Küche/WhatsApp Image 2025-06-20 at 11.33.02.jpeg" alt="drawing" width="400"/>
 <p><strong>Problem:</strong> Fußleiste ist nicht vollständig gestrichen.</p>
 <p><strong>Erwartung:</strong> Fußleiste ist vollständig gestrichen. Allerdings steht hier bereits die Küche vor der Fußleiste, da wir am 20.06. in die Wohnung ziehen mussten.</p>
+<p><strong>Update:</strong> Kann nicht behoben wurden, da mit dem Einzug sich diese Stellen hinter der Küchenzeile befinden.</p>
 <video width="320" height="240" controls>
   <source src="./Küche/WhatsApp Video 2025-06-20 at 11.34.43.mp4" type="video/mp4">
 </video>
 <p><strong>Problem:</strong> Unsaubere Stellen unterhalb der Fliesen. Die Wand scheint ist hier sehr rau.</p>
 <p><strong>Erwartung:</strong> Saubere Wandstellen, an denen der Putz oder die Farbschichten gleichmäßig aufgetragen ist. Dieser Bereich ist bereits durch den Einzug durch eine Küchenzeile verdeckt.</p>
+<p><strong>Update:</strong> Wird zum Teil behoben werden, ein Teil ist jedoch ebenfalls durch die Küchenzeile verdeckt.</p>
 <video width="320" height="240" controls>
   <source src="./Küche/WhatsApp Video 2025-06-20 at 11.39.04.mp4" type="video/mp4">
 </video>
-<p><strong>Problem:</strong> Die Steckdosen funktionieren nicht. Sie wurden mehrfach durch die Wohnungseigentümer vertestet.</p>
-<p><strong>Erwartung:</strong> Funktionierende Steckdosen. Die Behebung erfolgte durch den Eigentümer, eine Steckdose war nicht richtig angeklemmt.</p>
+<p><strong>Problem:</strong> Die Steckdosen funktionieren nicht. Sie wurden mehrfach durch die Wohnungseigentümer vertestet. Die Behebung erfolgte durch den Eigentümer, eine Steckdose war nicht richtig angeklemmt.</p>
+<p><strong>Erwartung:</strong> Funktionierende Steckdosen.</p>
 <img src="./Küche/WhatsApp Image 2025-06-22 at 13.03.15.jpeg" alt="drawing" width="400"/>
 <p><strong>Problem:</strong> Teile der alten Tapete finden sich noch unter den Heizkörpern. Eine Entfernung der alten Tapeten hinter den Heizkörpern wurde nicht vereinbart. Hier zeigt sich die Tapete jedoch noch unterhalb der Heizung.</p>
 <p><strong>Erwartung:</strong> Tapete soll von außen nicht mehr zu sehen sein.</p>
@@ -532,6 +531,9 @@ Das Wohnzimmer wurde noch nicht bearbeitet.</p>
 <img src="./Badezimmer groß/WhatsApp Image 2025-06-22 at 12.11.16.jpeg" alt="drawing" width="400"/>
 <p><strong>Problem:</strong> Farbe findet sich in der Toilette. Die Toiellete ist hier schwer zu reinigen. Mit der Toilettenbürste konnte ich die Farbe bis jetzt nicht entfernen.</p>
 <p><strong>Erwartung:</strong> Die Toilette findet sich so vor, wie wir sie vor den Arbeiten verlassen haben.</p>
+<p><strong>Strom</strong></p>
+<p>Im Badezimmer funktionierten 2 Steckdosen nicht richtig. Neben dem Vorbau an der linken Wand, gibt es insgesamt 3 Steckdosen. Eine im unteren Bereich und zwei im oberen, siehe Bild. Beim Nutzen der oberen Steckdosen und der unteren, schaltete sich der Strom für die Steckdosen komplett ab. Eine Nutzung wie auf dem Bild gezeigt, war vor der Behebung am 21.06. nicht möglich.</p>
+<img src="./Badezimmer groß/c5ef2c8a-7420-4bf7-862f-983b186c4199.jpeg" alt="drawing" width="400"/>
 <div id='Arbeitszimmer' />
 <h2 id="arbeitszimmer">Arbeitszimmer</h2>
 <img src="./Arbeitszimmer/WhatsApp Image 2025-06-22 at 12.11.35.jpeg" alt="drawing" width="400"/>
@@ -546,6 +548,19 @@ Das Wohnzimmer wurde noch nicht bearbeitet.</p>
 <img src="./Arbeitszimmer/WhatsApp Image 2025-06-22 at 13.48.40.jpeg" alt="drawing" width="400"/>
 <p><strong>Problem:</strong> Flecken an der Wand im Arbeitszimmer. Vermutlich von der Beize.</p>
 <p><strong>Erwartung:</strong> Keine Flecken an der Wand. Gern Farbe für die Eigentümer da lassen.</p>
+<img src="./Arbeitszimmer/1b4805f4-841c-44ad-ae46-e495a4f5d8e7.jpeg" alt="drawing" width="400"/>
+<p><strong>Problem:</strong> Flecken an der Wand im Arbeitszimmer. Vermutlich von der Beize.</p>
+<p><strong>Erwartung:</strong> Keine Flecken an der Wand. Gern Farbe für die Eigentümer da lassen.</p>
+<h2 id="haarrisse-in-den-w%C3%A4nden">Haarrisse in den Wänden</h2>
+<p>In der 1. Juli Woche wurden Haar- und Setzrisse in den Wänden bemerkt. Betroffene Stellen:</p>
+<p><strong>Schlafzimmer</strong></p>
+<img src="./Schlafzimmer/WhatsApp Image 2025-07-05 at 12.59.25.jpeg" alt="drawing" width="400"/>
+<p><strong>Arbeitszimmer</strong></p>
+<img src="./Arbeitszimmer/WhatsApp Image 2025-07-05 at 12.59.25 (1).jpeg" alt="drawing" width="400"/>
+<img src="./Arbeitszimmer/WhatsApp Image 2025-07-05 at 12.59.25 (2).jpeg" alt="drawing" width="400"/>
+<img src="./Arbeitszimmer/WhatsApp Image 2025-07-05 at 12.59.25.jpeg" alt="drawing" width="400"/>
+<p><strong>Problem:</strong> Optisch sind die Risse, vor allem der im Schlafzimmer deutlich sichtbar. Die Risse tauchen kurz nach der Renovierung auf.</p>
+<p>Der Lösungsvorschlag nach auftauchen der Mängel seitens der Werksfirma war hier, dünne Wände mit Malervlies zu versehen um so der Bildung von Haarrissen vorzubeugen. Aufgrund der vielzahl an sonstigen Mängeln herrscht Unsicherheit, inwiefern es sich dabei um eine gute Lösung handelt. Zudem wissen wir nicht, ob die Risse unterhalb des neuen Putzes ordnugnsgemäß verschlossen wurden.</p>
 
 </body>
 </html>
